--- a/comebuy/public/index.html
+++ b/comebuy/public/index.html
@@ -28,6 +28,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://www.paypal.com/sdk/js?client-id=AS1iVLfP5CcDX4K2KRlwA3qPdZ4E4OpHu__ZqLmSxqnQvawC6TMHk8qHofULZdJAqz51RmKm9FlU5ds3&currency=USD"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
